--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
         "phpunit/phpunit": "^10",
         "symfony/var-dumper": "^7.0",
         "friendsofphp/php-cs-fixer": "^3.40"
+    },
+    "scripts": {
+        "csfixer": [
+            "php vendor/bin/php-cs-fixer fix"
+        ]
     }
 }
