--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,8 +29,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+
       - name: Composer install
-        uses: php-actions/composer@v6
+        run: composer install
 
       - name: Run PHPUnit tests
         run: php vendor/bin/phpunit --testdox
